added Keeper call to xVars class added log messages when setting debug mode